# project_version

./: README.md
a-1/: a.cabal
a-2/: a.cabal
a-2/src/: A.hs
b/: b.cabal
b/src/: A.hs
c/: c.cabal
c/src/: C.hs
