name: b
version: 0.1.0.0

build-type: Simple
cabal-version: >= 1.10

Flag old-a
  Default: False

library
  if flag(old-a)
    exposed-modules: A
    build-depends: base >= 4.11 && < 4.12, a < 0.2
  else
    build-depends: base >= 4.11 && < 4.12, a >= 0.2
  hs-source-dirs: src
  default-language: Haskell2010
